// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityCardPlaceholder should render a card placeholder with action placeholder 1`] = `
<div
  aria-hidden={true}
  className="woocommerce-activity-card is-loading"
>
  <span
    className="woocommerce-activity-card__icon"
  >
    <span
      className="is-placeholder"
    />
  </span>
  <div
    className="woocommerce-activity-card__header"
  >
    <div
      className="woocommerce-activity-card__title is-placeholder"
    />
  </div>
  <div
    className="woocommerce-activity-card__body"
  >
    <span
      className="is-placeholder"
    />
  </div>
  <div
    className="woocommerce-activity-card__actions"
  >
    <span
      className="is-placeholder"
    />
  </div>
</div>
`;

exports[`ActivityCardPlaceholder should render a card placeholder with all optional placeholder 1`] = `
<div
  aria-hidden={true}
  className="woocommerce-activity-card is-loading"
>
  <span
    className="woocommerce-activity-card__icon"
  >
    <span
      className="is-placeholder"
    />
  </span>
  <div
    className="woocommerce-activity-card__header"
  >
    <div
      className="woocommerce-activity-card__title is-placeholder"
    />
    <div
      className="woocommerce-activity-card__subtitle is-placeholder"
    />
    <div
      className="woocommerce-activity-card__date"
    >
      <span
        className="is-placeholder"
      />
    </div>
  </div>
  <div
    className="woocommerce-activity-card__body"
  >
    <span
      className="is-placeholder"
    />
  </div>
  <div
    className="woocommerce-activity-card__actions"
  >
    <span
      className="is-placeholder"
    />
  </div>
</div>
`;

exports[`ActivityCardPlaceholder should render a card placeholder with date placeholder 1`] = `
<div
  aria-hidden={true}
  className="woocommerce-activity-card is-loading"
>
  <span
    className="woocommerce-activity-card__icon"
  >
    <span
      className="is-placeholder"
    />
  </span>
  <div
    className="woocommerce-activity-card__header"
  >
    <div
      className="woocommerce-activity-card__title is-placeholder"
    />
    <div
      className="woocommerce-activity-card__date"
    >
      <span
        className="is-placeholder"
      />
    </div>
  </div>
  <div
    className="woocommerce-activity-card__body"
  >
    <span
      className="is-placeholder"
    />
  </div>
</div>
`;

exports[`ActivityCardPlaceholder should render a card placeholder with subtitle placeholder 1`] = `
<div
  aria-hidden={true}
  className="woocommerce-activity-card is-loading"
>
  <span
    className="woocommerce-activity-card__icon"
  >
    <span
      className="is-placeholder"
    />
  </span>
  <div
    className="woocommerce-activity-card__header"
  >
    <div
      className="woocommerce-activity-card__title is-placeholder"
    />
    <div
      className="woocommerce-activity-card__subtitle is-placeholder"
    />
  </div>
  <div
    className="woocommerce-activity-card__body"
  >
    <span
      className="is-placeholder"
    />
  </div>
</div>
`;

exports[`ActivityCardPlaceholder should render a default placeholder 1`] = `
<div
  aria-hidden={true}
  className="woocommerce-activity-card is-loading"
>
  <span
    className="woocommerce-activity-card__icon"
  >
    <span
      className="is-placeholder"
    />
  </span>
  <div
    className="woocommerce-activity-card__header"
  >
    <div
      className="woocommerce-activity-card__title is-placeholder"
    />
  </div>
  <div
    className="woocommerce-activity-card__body"
  >
    <span
      className="is-placeholder"
    />
  </div>
</div>
`;
